# human-dynamics-estimation

./: .appveyor.yml  .gitignore  .tags  .travis.yml  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  README.md  ci_env.yml
FTShoes/: CMakeLists.txt
FTShoes/include/: FTShoes.h
HumanDynamicsEstimationLibrary/: CMakeLists.txt
HumanDynamicsEstimationLibrary/algorithms/: CMakeLists.txt
HumanDynamicsEstimationLibrary/include/: InverseVelocityKinematics.hpp  Utils.hpp
HumanDynamicsEstimationLibrary/src/: InverseVelocityKinematics.cpp  Utils.cpp
HumanDynamicsEstimationLibrary/utils/: CMakeLists.txt
IWear/: CMakeLists.txt  IWear-defaultImpl.h  IWear.h  Utils.h
IWear/Sensors/: I3DForce.h  I3DTorque.h  I6DForceTorque.h  IAccelerometer.h  IEmg.h  IEmgSensor.h  IForce3DSensor.h  IForceTorque6DSensor.h  IFreeBodyAcceleration.h  IFreeBodyAccelerationSensor.h  IGyroscope.h  IMagnetometer.h  IOrientation.h  IOrientationSensor-defaultImpl.h  IOrientationSensor.h  IPoseSensor-defaultImpl.h  IPoseSensor.h  IPositionSensor.h  ISensor.h  ISkin.h  ISkinSensor.h  ITemperature.h  ITemperatureSensor.h  ITorque3DSensor.h  IVirtualJointKin.h  IVirtualLinkKin.h  IVirtualLinkKinSensor.h  IVirtualSphericalJointKinSensor.h
XSensMVN/: CMakeLists.txt
XSensMVN/include/: XSensCalibrationQualities.h  XSensLogger.h  XSensMVNCalibrator.h  XSensMVNDriver.h  XSensMVNDriverImpl.h  XSensMVNDriverImplBCKP.h  XSensMVNDriverStates.h
XSensMVN/src/: XSensMVNCalibrator.cpp  XSensMVNDriver.cpp  XSensMVNDriverImpl.cpp  XSensMVNDriverImpl_BCKP.cpp
XSensMVN/test/: CMakeLists.txt  testCalibrator.cpp  testDriver.cpp
XSensMVNDriver/: CMakeLists.txt
XSensMVNDriver/include/: XSensCalibrationQualities.h  XSensLogger.h  XSensMVNCalibrator.h
XSensMVNDriver/src/: XSensMVNCalibrator.cpp
XSensMVNDriver/test/: CMakeLists.txt  testCalibrator.cpp
XSensSuit/: CMakeLists.txt
XSensSuit/include/: XSensSuit.h
XSensSuit/src/: XSensSuit.cpp
app/: CMakeLists.txt
app/conf/: HumanDynamicsEstimation.xml  HumanDynamicsEstimation_RobotFTShoesSetup.xml  HumanDynamicsEstimation_RobotForcePlatesSetup.xml  HumanDynamicsEstimation_noRobotFTShoesSetup.xml  HumanDynamicsEstimation_noRobotForcePlatesSetup.xml  HumanDynamicsEstimator.ini  humanforceprovider.xml  humanstateprovider.xml  iwearRemappe.xml  newhde.xml  remapper.xml  soloHuman.xml  xsensPub.xml  xsenshumanstateprovider.xml
app/icubTeleoperationModels/: database.config
app/rviz/: Human.launch  Human.rviz  newHuman.rviz  pHRI.rviz
app/urdfs/: Claudia48DoF.urdf  Claudia48DoF.xml  Claudia48DoF_Dec2017.urdf  Claudia66DoF.urdf  Claudia66DoF_2PILimit.urdf  Claudia66DoF_Dec2017.urdf  Claudia66DoF_PILimit.urdf  Claudia66DoF_e16Limit.urdf  Claudia66DoF_noLimit.urdf  Marta48DoF.urdf  Marta48DoF.xml  Marta66DoF.urdf  Marta66DoF.xml  Meri48DoF.urdf  Meri48DoF.xml  Meri66DoF (copy).urdf  Meri66DoF.urdf  XSensURDF_subj1.urdf  XSensURDF_subj1_66.urdf  iCubGenova02.urdf  iCubGenova02_model.urdf  iCubGenova04.urdf  iCubGenova04_model.urdf  teleoperation_iCub_model_V_2_5.urdf
app/xml/: AMTIForcePlatesWearableDevice.xml  FTShoeLeftWearableDevice.xml  FTShoeRightWearableDevice.xml  FTShoesWearableDevice.xml  FTShoesWearableDevice_2.xml  HDE-cluster-config.xml  Human.xml  HumanDynamicsEstimation.xml  HumanDynamicsEstimationApplication.xml  HumanJointTorquesYarpScope.xml  HumanStateProvider_icub_V_2_5.xml  ICubWearableDevice.xml  PRO01_FTShoesWearableDevice.xml  SkinInsolesWearableDevice.xml  XsensSuitWearableDevice.xml  cluster-config.xml  iWearLoggerExampleTemplate.xml  pHRI.xml
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  hde.cpp  wearables.cpp
bindings/python-hde/: CMakeLists.txt
bindings/python-wearables/: CMakeLists.txt
clients/HumanWrench_nwc_yarp/: CMakeLists.txt  HumanWrench_nwc_yarp.cpp  HumanWrench_nwc_yarp.h
conf/: CMakeLists.txt  HDE-yarpmanager.ini  cluster-config.xml  iFeelOpenVRCalibration.sh  iFeelOpenXRCalibration.sh  iFeelOpenXRCalibrationNoVirtualizer.sh
conf/FTShoes/: ftshoesleft_ianalogsensor_to_iwear.xml  ftshoesright_ianalogsensor_to_iwear.xml
conf/ICub/: ICub.xml
conf/Xsens/: XsensAwindaSuitWearableDevice.xml  XsensLinkSuitWearableDevice.xml  xsens_windows_all_wrappers.xml
conf/app/: HumanStateVisualizer.ini  HumanStateVisualizerWithDynamics.ini  HumanStateVisualizer_ergoCub_openxr.ini  HumanStateVisualizer_ergoCub_openxr_ifeel.ini  HumanStateVisualizer_iCub2_5.ini  HumanStateVisualizer_iCub2_5_openxr.ini  HumanStateVisualizer_iCub2_5_openxr_ifeel.ini  HumanStateVisualizer_iCub3.ini  HumanStateVisualizer_iCub3_openvr_ifeel.ini  HumanStateVisualizer_iCub3_openxr.ini  HumanStateVisualizer_iCub3_openxr_ifeel.ini  HumanStateVisualizer_iRonCub_openxr.ini  HumanStateVisualizer_iRonCub_openxr_ifeel.ini
conf/config/: icub_customized_constraints.ini
conf/ros/: package.xml
conf/urdfs/: Claudia48DoF_Dec2017.urdf  iCubGazeboV2_5.urdf  teleoperation_iCub_model_V_2_5.urdf  teleoperation_iCub_model_V_3.urdf
conf/xml/: HDEEstimatedWrench_YarpScope.xml  Human.xml  HumanIFeel.xml  HumanJointTorquesYarpScope.xml  HumanLoggerExample.xml  HumanStateProvider.xml  HumanStateProvider_1.xml  HumanStateProvider_2.xml  HumanStateProvider_running.xml  HumanStateProvider_second.xml  Human_1.xml  Human_2.xml  Human_Dynamics_from_remapper.xml  Human_MAPest.xml  Human_one_hand.xml  IWearRemapper.xml  RobotPosePublisher.xml  RobotStateProvider.xml  (+42 more)
devices/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  DoxygenLayout.xml  How-to-compile-and-run-HapticGlove.md  How-to-run-FTshoes.md  How-to-run-XsensSuit.md  How-to-run-iCub-as-wearable-source.md  README.md  how-to-run-dynamics-estimation.md  how-to-run-inverse-kinematics.md  how-to-run-whole-body-retargeting.md
hde-interface/: CMakeLists.txt  README.md
hde_interface/: CMakeLists.txt
human-dynamics-estimator/: CMakeLists.txt  README.md
human-robot-pose/: CMakeLists.txt
interfaces/: CMakeLists.txt
inverse-kinematics/: CMakeLists.txt
msgs/: CMakeLists.txt
publishers/: CMakeLists.txt
wrappers/: CMakeLists.txt
yarp-experimental/: CMakeLists.txt  IHumanSkeleton.cpp
(+585 files in other folders)
