# Copyright (C) 2021 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# GNU Lesser General Public License v2.1 or any later version.

# Include AddComponent cmake module
include(AddComponent)

add_subdirectory(algorithms)
add_subdirectory(utils)
